[package]
name = "arweave-exex-backfill"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.6"
borsh-derive = "1.5.1"
dotenv = "0.15.0"
ethers = "2.0.14"
ethers-providers = "2.0.14"
reqwest = { version = "0.12.7",  features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
bundlr-sdk = { git = "https://github.com/weaveVM/wvm-irys-rust-sdk.git", branch = "master" }
eyre = "0.6.12"
borsh = "1.5.1"
brotli = "6.0.0"
planetscale-driver = "0.5.1"
